<resources>
    <string name="app_name">News App Finaly</string>
    <string name="version">version 1.0.0</string>
    <string name="facebook_app_id">2205876216240650</string>
    <string name="fb_login_protocol_scheme">fb2205876216240650</string>
    <string name="select_your_country">Select Your Country</string>
    <string name="select_your_topic">Choose Your Category</string>
    <string name="next">Next</string>
    <string name="search">Search</string>
    <string name="uz">UZ</string>
    <string name="uzbekistan">Uzbekistan</string>
    <string name="empty">Empty</string>
    <string name="sport">Sport</string>
    <string name="news">News</string>
    <string name="lets_sign">Let\'s Sign You In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_the_password">Forgot the password</string>
    <string name="or_continue_with">or continue with</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="create_an_account">Create an Account</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="select_reset">Select which contact details shouldwe use to reset your password</string>
    <string name="via_sms">via SMS:</string>
    <string name="view_email">view Email:</string>
    <string name="number">+99890*****14</string>
    <string name="email_l">ex***le@yourdomain.com</string>
    <string name="continue_e">Continue</string>
</resources>