<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color">

    <ImageView

        android:id="@+id/back"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/back_style_arrow"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/arrow_left_2_svgrepo_com"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView

        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:fontFamily="@font/new_font"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintBottom_toBottomOf="@id/back"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintLeft_toRightOf="@id/back"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/back" />

    <com.airbnb.lottie.LottieAnimationView

        android:id="@+id/lottie"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/forgot" />

    <TextView

        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/robo"
        android:text="@string/select_reset"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintTop_toBottomOf="@id/lottie" />


    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/viaSms"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/back_style_item_country"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/desc">

        <ImageView

            android:id="@+id/imageSms"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:background="@drawable/back_style_circle"
            android:padding="@dimen/_18sdp"
            android:src="@drawable/ic_baseline_sms_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#FF726B" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/robo"
            android:text="@string/via_sms"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintLeft_toRightOf="@id/imageSms"
            app:layout_constraintTop_toTopOf="@id/imageSms" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:fontFamily="@font/robo"
            android:text="+99890*****14"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/imageSms"
            app:layout_constraintLeft_toRightOf="@id/imageSms" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/viaEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/back_style_item_country"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/viaSms">

        <ImageView

            android:id="@+id/imageEmail"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:background="@drawable/back_style_circle"
            android:padding="@dimen/_18sdp"
            android:src="@drawable/ic_baseline_email_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#FF726B" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/robo"
            android:text="@string/view_email"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintLeft_toRightOf="@id/imageEmail"
            app:layout_constraintTop_toTopOf="@id/imageEmail" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:fontFamily="@font/robo"
            android:text="@string/email_l"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/imageEmail"
            app:layout_constraintLeft_toRightOf="@id/imageEmail" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton

        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/back_style_next_button"
        android:text="@string/continue_e"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>