<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color">



    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:id="@+id/cl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.airbnb.lottie.LottieAnimationView

                android:layout_width="match_parent"
                android:layout_height="@dimen/_80sdp"
                app:layout_constraintBottom_toTopOf="@id/app_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/news" />

            <ImageView

                android:id="@+id/logo"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.1" />

            <TextView

                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/new_font"
                android:text="@string/news"
                android:textColor="@color/main"
                android:textSize="@dimen/_18sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logo"
                app:layout_constraintVertical_bias="0" />

            <TextView

                android:id="@+id/loginTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/new_font"
                android:text="@string/lets_sign"
                android:textColor="@color/white"
                android:textSize="@dimen/_18sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/app_name"
                app:layout_constraintVertical_bias="0" />

            <TextView

                android:id="@+id/emailTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/new_font"
                android:text="@string/email"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginTv"
                app:layout_constraintVertical_bias="0" />

            <TextView


                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3sdp"
                android:text="*"
                android:textColor="#FA0303"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintLeft_toRightOf="@id/emailTop"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/emailTop"
                app:layout_constraintVertical_bias="0" />

            <LinearLayout

                android:id="@+id/emailLn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_36sdp"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/back_style_search"
                app:layout_constraintTop_toBottomOf="@id/emailTop">

                <EditText

                    android:id="@+id/emailEt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/robo"
                    android:hint="@string/email"
                    android:textCursorDrawable="@drawable/cursor_with_padding"
                    android:inputType="textEmailAddress"
                    android:paddingStart="@dimen/_16sdp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/hint_color"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

            <TextView

                android:id="@+id/passwordTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/new_font"
                android:text="@string/password"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailLn"
                app:layout_constraintVertical_bias="0" />

            <TextView


                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3sdp"
                android:text="*"
                android:textColor="#FA0303"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintLeft_toRightOf="@id/passwordTop"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/passwordTop"
                app:layout_constraintVertical_bias="0" />


            <LinearLayout

                android:id="@+id/passwordLn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_36sdp"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/back_style_search"
                app:layout_constraintTop_toBottomOf="@id/passwordTop">

                <EditText

                    android:id="@+id/passwordEt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/robo"
                    android:hint="@string/password"
                    android:textCursorDrawable="@drawable/cursor_with_padding"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/_16sdp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/hint_color"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

            <CheckBox

                android:id="@+id/rememberMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:buttonTint="@color/main"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/passwordLn" />

            <TextView

                android:id="@+id/rememberMeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:fontFamily="@font/robo"
                android:text="@string/remember_me"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/rememberMe"
                app:layout_constraintLeft_toRightOf="@id/rememberMe"
                app:layout_constraintTop_toTopOf="@id/rememberMe" />


            <androidx.appcompat.widget.AppCompatButton

                android:id="@+id/signIn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/back_style_next_button"
                android:text="Sign in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintTop_toBottomOf="@id/rememberMe" />

            <TextView

                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/robo"
                android:text="@string/forgot_the_password"
                android:textColor="@color/main"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signIn" />


            <TextView

                android:id="@+id/orFaceAndGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/robo"
                android:text="@string/or_continue_with"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/forgotPassword" />

            <LinearLayout

                android:id="@+id/facebook"
                android:layout_width="@dimen/_130sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/back_style_facebook_button"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:visibility="invisible"
                android:orientation="horizontal"
                android:textAllCaps="false"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/orFaceAndGoogle">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/facebook" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:fontFamily="@font/robo"
                    android:text="@string/facebook"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout

                android:id="@+id/google"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@drawable/back_style_facebook_button"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal"
                android:textAllCaps="false"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/orFaceAndGoogle">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/google" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:fontFamily="@font/robo"
                    android:text="@string/google"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/facebook"
                app:layout_constraintVertical_bias="0">


                <TextView

                    android:id="@+id/noAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

                <TextView

                    android:id="@+id/signUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:text="@string/sign_up"
                    android:textColor="@color/main"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
    <com.airbnb.lottie.LottieAnimationView

        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/prog" />

</androidx.constraintlayout.widget.ConstraintLayout>