<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color">

    <ImageView

        android:id="@+id/back"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/back_style_arrow"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/arrow_left_2_svgrepo_com"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView

        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:fontFamily="@font/new_font"
        android:text="@string/select_your_country"
        android:textColor="@color/white"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintBottom_toBottomOf="@id/back"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintLeft_toRightOf="@id/back"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/back" />

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/search_cl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_36sdp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/back_style_search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintVertical_bias="0">

        <EditText

            android:id="@+id/search_country"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/search"
            android:paddingStart="@dimen/_20sdp"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_color"
            android:textCursorDrawable="@drawable/cursor_with_padding"
            app:layout_constraintLeft_toLeftOf="parent" />

        <ImageView

            android:id="@+id/search_icon"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/back_style_arrow"
            android:padding="@dimen/_13sdp"
            android:src="@drawable/search_svgrepo_com__1_"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/search_country"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView

        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/bottom_ln"
        app:layout_constraintTop_toBottomOf="@id/search_cl"
        tools:listitem="@layout/item_country" />

    <com.airbnb.lottie.LottieAnimationView

        android:id="@+id/loading"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/prog" />

    <TextView

        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/robo"
        android:text="@string/empty"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/rv"
        app:layout_constraintLeft_toLeftOf="@id/rv"
        app:layout_constraintRight_toRightOf="@id/rv"
        app:layout_constraintTop_toTopOf="@id/rv" />

    <LinearLayout

        android:id="@+id/bottom_ln"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70sdp"
        android:background="@drawable/back_style_bottom_ln"
        android:elevation="@dimen/_10sdp"
        android:orientation="vertical"
        android:translationZ="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatButton

            android:id="@+id/next_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/back_style_next_button"
            android:fontFamily="@font/new_font"
            android:letterSpacing="0.1"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>